# oasis-rofl-client-py

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: publish.md
examples/: README.md  advanced_usage.py  basic_usage.py
src/oasis_rofl_client/: __about__.py  __init__.py  client.py  rofl_client.py
tests/: test_client.py
