[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "oasis-rofl-client-py-rube"
dynamic = ["version"]
description = "Python client SDK for Oasis ROFL."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "rube-de", email = "bernhard@oasisprotocol.org" },
]
dependencies = [
  "httpx>=0.25.0",
]
license = { text = "Apache-2.0" }
keywords = ["oasis", "rofl", "client", "sdk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/rube-de/oasis-rofl-client-py"
"Bug Tracker" = "https://github.com/rube-de/oasis-rofl-client-py/issues"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/oasis_rofl_client/_version.py"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
