[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "oasis-rofl-client-py-rube"
dynamic = ["version"]
description = "Python client SDK for Oasis ROFL."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "rube-de", email = "bernhard@oasisprotocol.org" },
]
dependencies = [
  "httpx>=0.25.0",
]
license = { text = "Apache-2.0" }
keywords = ["oasis", "rofl", "client", "sdk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/rube-de/oasis-rofl-client-py"
"Bug Tracker" = "https://github.com/rube-de/oasis-rofl-client-py/issues"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"
raw-options = { tag_regex = '^rofl-client/py/(?P<version>v\\d+\\.\\d+\\.\\d+.*)$' }

[tool.hatch.build.hooks.vcs]
version-file = "src/oasis_rofl_client/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/oasis_rofl_client"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".git",
    "__pycache__",
    ".ruff_cache",
    ".pytest_cache",
    ".mypy_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring (conflicts with D211)
    "D213", # Multi-line docstring summary should start at the second line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",    # Ignore all docstring rules in tests
    "S101", # Use of assert detected
]
"examples/**/*.py" = [
    "D",    # Ignore all docstring rules in examples
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
skip-magic-trailing-comma = false
quote-style = "double"
indent-style = "space"
docstring-code-format = true
